# wselfedu

./: .buildinfo  .coveragerc  .dockerignore  .env.example  .env.postgres.example  .env_example  .gitignore  .htaccess  .mypy.ini  .pytest.ini  .ruff.toml  Makefile  README-md.md  README.md  README.rst  api.html  branch.py  changelog.html  create_db_example.sql  db_archive_refactor.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  explanation.html  fixtures-terms.json  fixtures.json  genindex.html  how_to_guid.html  index.html  manage.py  mypy.ini  nginx.conf  objects.inv  passenger_wsgi.py  py-modindex.html  pyproject.toml  pytest.ini  reference.html  requirements.dev.txt  (+9 more)
.doctrees/: api.doctree  changelog.doctree  environment.pickle  explanation.doctree  how_to_guid.doctree  index.doctree  reference.doctree  tutorial.doctree  usage.doctree
.env_vars/: .env.example  .env.wse.example
_sources/: changelog.rst.txt  index.rst.txt  tutorial.rst.txt  usage.rst.txt
about/: releases.html
app-wse/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
app-wse/config/: __init__.py  settings.py  urls.py
app-wse/contrib/: mixins_views.py
app-wse/docs/source/: changelog.rst  conf.py  how_to_guid.rst  index.rst  packages.rst  tutorial.rst  usage.rst
app-wse/docs/source/tests_e2e/pages/: base.rst  home.rst  user.rst
app-wse/docs/source/tests_e2e/tests/: home.rst  index.rst  user.rst
app-wse/docs/source/tutorial/: index.rst  index_exercise.rst  overview.rst  user.rst  word.rst  word_dict.rst
app-wse/english/: admin.py
app-wse/english/analytics/: english_analytics.py
app-wse/english/forms/: __init__.py
app-wse/english/migrations/: 0001_initial.py
app-wse/english/models/: categories.py  words.py
app-wse/english/services/: serve_query.py
app-wse/english/templates/english/: source_detail.html  user_word_list.html  word_list.html
app-wse/english/templates/english/tasks/: word_study.html
app-wse/english/views/: crud_categories.py  settings_views.py
app-wse/glossary/: __init__.py  admin.py  models.py
app-wse/glossary/migrations/: 0001_initial.py  0002_glossarycategory_glossary_category.py  0004_alter_glossary_options_and_more.py  0008_glossarycategory_created_at.py  0009_alter_glossarycategory_category_and_more.py  0011_alter_glossary_created_at.py  0012_rename_email_glossarycategory_url.py
app-wse/services/: reformat_db_data_file.py
app-wse/static_src/: csrf-token.js  english_translate_demo.js
app-wse/task/: __init__.py
app-wse/task/migrations/: 0002_alter_englishtasksettings_options.py
app-wse/task/models/: task_settings.py
app-wse/task/tasks/: math_calculate_task.py
app-wse/task/templates/task/english/: english_translate_choice.html  english_translate_demo.html
app-wse/task/views/: english_translate_views.py
app-wse/templates/: base.html  delete.html
app-wse/templates/components/: btn_reset.html  navbar.html
app-wse/tests/fixtures/: wse-db-fixture-users.json
app-wse/tests/tests_english/: test_crud_sources.py  test_func_word_favorites.py  test_pagination.py
app-wse/tests/tests_english/fixtures/: wse-fixtures-2.json
app-wse/tests/tests_english_task/: test_english_analytic.py
app-wse/tests/tests_english_task/fixtures/: wse-fixtures-4.json
app-wse/tests/tests_users/fixtures/: wse-fixtures-3.json
app-wse/tests_e2e/: __init__.py
app-wse/tests_e2e/auth/: get_auth_state.py
app-wse/tests_e2e/fixtures/: fixture-db-wse-user.json
app-wse/tests_e2e/pages/: base.py  home.py  user.py
app-wse/tests_e2e/tests/: base.py  test_home.py  test_user.py
app-wse/users/: admin.py  forms.py
app-wse/users/migrations/: 0001_initial.py
app-wse/users/templates/users/: detail.html  list.html  login.html
apps/: __init__.py
base/: __init__.py
changelog/: changelog.html
config/: __init__.py  asgi.py  constants.py  consts.py  context_processor.py  logger_config.py  settings.py  urls.py  view_crispy.py  views.py  wsgi.py
contrib/: __init__.py  cache.py  db_archive_refactor.py  db_archive_refactor_v0_4_1.py  db_archive_refactor_v0_4_2.py  exercise.py  expanded_test.py  lookup_params.py  mixins_tests.py  mixins_views.py  plw_test.py  queries.py  tests_extension.py
contrib_app/: contrib_test.py  mixins.py  task.py
core/: __init__.py  settings.py  urls.py  wsgi.py
development/: index.html  packages.html
devops/: index.html  overview.html
di/: __init__.py  di_container.py  di_initialization.py
docs/: install
english/: __init__.py  admin.py  apps.py  filters.py  serializers.py  services.py  urls.py
features/: __init__.py
foreign/: admin.py  apps.py  serializers.py
glossary/: __init__.py  admin.py  apps.py  models.py  serializers.py  views_drf.py
hexagonal_arch/: __init__.py  _abc_input.py  _abc_output.py  adapter.py  core.py  enums.py
how-to-guides/: index.html
install/: index.html
managers/: __init__.py  balance.py  basis.py  di_container.py  transaction.py  user.py
mathem/: forms.py  urls.py
mathematics/: __init__.py  admin.py  apps.py  models.py  urls.py
nginx/: nginx.conf
notion/: admin.py  urls.py
production_data/: fixtures_config.yaml
reference/: constants.html  index.html
rest/: foreign.html  glossary.html  index.html  user.html
rest_api/: glossary.html  index.html  user.html  word.html
service_tools/: change_categories_in_wordmodel.py  database_find_duplicates.py  reformat_db_data.py  reformat_db_data_file.py
services/: __init__.py  base.py  exceptions.py  exercise.py  interfaces.py
sources/: index.html  sources.html
src/: di_container.py  manage.py
static/: english_add_word.js  favorites_word.js  math_calculate_solution.js
static_src/: common_task_interface.js  csrftoken.js  english_add_word.js  english_translate_demo.js  favorites_word.js  foreign_add_word.js  math_calculate_solution.js  math_task.js  task.js  task_math.js  task_word.js  word_task.js
task/: __init__.py  admin.py  apps.py  context_processors.py  points.py  points_mng.py  serializers.py  task_mng.py  urls.py
(+2560 files in other folders)
