[tool.poetry]
name = "wselfedu"
version = "0.1.0"
description = "Self-education project."
authors = ["Sergei Mikurov <454004@mail.ru>"]
readme = "README.md"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
addopts = [
#    "-vv",
#    "-s",
    "--doctest-modules",
    "--ignore=postgres_data/",
    "--ignore=static/",
    "--ignore=docs/",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(module)s...%(funcName)s -> %(message)s"
log_cli_date_format = "%H:%M:%S"
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
exclude = [
    ".github/*",
    ".idea/*",
    ".venv/*",
    "docker/*",
    "postgres_data/*",
    "templates/*",
    ".env*",
    "*/migrations/*",
]
line-length = 79

[tool.ruff.lint]
preview = true  # checks will include unstable rules and fixes
select = [
    "F",    # pyflakes: https://pypi.org/project/pyflakes/
    "E",    # pycodestyle: Error; pycodestyle: https://pypi.org/project/pycodestyle/
    "W",    # pycodestyle: Warning
    "I",    # isort: https://pypi.org/project/isort/
    "N",    # pep8-naming: https://pypi.org/project/pep8-naming/
    "D",    # pydocstyle: https://pypi.org/project/pydocstyle/
    "B",    # flake8-bugbear: https://pypi.org/project/flake8-bugbear/
    "C90",  # mccabe: https://pypi.org/project/mccabe/
    "ANN",  # flake8-annotations: https://pypi.org/project/flake8-annotations/
    "Q",    # flake8-quotes: https://pypi.org/project/flake8-quotes/
]
ignore = [
    "D203",     # 1 blank line required before class docstring
    "D211",     # No blank lines allowed before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D416",     # Section name should end with a colon
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.mypy]
mypy_path = "./config"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
# https://github.com/typeddjango/django-stubs
django_settings_module = "config.settings"

[tool.coverage]
    [tool.coverage.run]
    omit = [
        "tests/*",
        "*/tests/*",
        "*/migrations/*",
        "*/apps.py",
        "manage.py",
        "docs/*",
    ]

    [tool.coverage.report]
    skip_empty = true
