[project]
name = "wse_django"
version = "0.4.0"
description = "WSE Series Django backend"
authors = [
    { name = "Sergei Mikurov", email = "454004@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.2.2,<6.0.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.wse.dependencies]
wse-exercises = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
sphinx = ">=7.0,<8.0"
drf-spectacular = "^0.28.0"


[tool.ruff]
exclude = [
    ".github/*",
    ".idea/*",
    ".venv*",
    "docs/*",
    "*/migrations/*.py",
    "*/conftest.py",
]
line-length = 79

[tool.ruff.lint.per-file-ignores]
"*/interfaces/*.py" = [
    "D101",     # undocumented public class definitions
    "D102",     # undocumented public method definitions
    "D204",     # class methods are not separated from the class's docstring
    "E301",     # missing blank lines between methods of a class
    "E302"      # missing blank lines between top level functions and classes
]
"settings.py" = [
    "E501"      # lines exceed the specified maximum character length
]

[tool.ruff.lint]
preview = true  # checks will include unstable rules and fixes
select = [
    "F",    # pyflakes: https://pypi.org/project/pyflakes/
    "E",    # pycodestyle: Error; pycodestyle: https://pypi.org/project/pycodestyle/
    "W",    # pycodestyle: Warning
    "I",    # isort: https://pypi.org/project/isort/
    "N",    # pep8-naming: https://pypi.org/project/pep8-naming/
    "D",    # pydocstyle: https://pypi.org/project/pydocstyle/
    "B",    # flake8-bugbear: https://pypi.org/project/flake8-bugbear/
    "C90",  # mccabe: https://pypi.org/project/mccabe/
    "ANN",  # flake8-annotations: https://pypi.org/project/flake8-annotations/
    "Q",    # flake8-quotes: https://pypi.org/project/flake8-quotes/
]
ignore = [
    "D203",     # 1 blank line required before class docstring
    "D211",     # No blank lines allowed before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D416",     # Section name should end with a colon
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
